--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.18.9",
     "axios": "^0.26.0",
     "immutable": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
