--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "start": "export BROWSER=none && export PORT=9967 && react-scripts start",
+    "start": "set BROWSER=none && set PORT=9967 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
