--- a/package.json
+++ b/package.json
@@ -11,40 +11,43 @@
     "react",
     "component"
   ],
-  "dependencies": {
+  "files": ["lib"],
+  "peerDependencies": {
+    "antd": ">=4.18.9",
+    "react": ">=17.0.2",
+    "react-redux": ">=7.2.6",
+    "redux": ">=4.1.2",
+    "styled-components": ">=5.3.3"
+  },
+  "devDependencies": {
     "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "axios": "^0.26.0",
-    "immutable": "^4.0.0",
-    "lodash": "^4.17.21",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-scripts": "5.0.0",
-    "redux": "^4.1.2",
-    "redux-immutable": "^4.0.0",
-    "redux-thunk": "^2.4.1",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.0"
-  },
-  "peerDependencies": {
-    "antd": ">=4.18.9",
-    "react": ">=17.0.2"
-  },
-  "devDependencies": {
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "antd": "^4.18.9",
+    "axios": "^0.26.0",
+    "immutable": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "6",
-    "typescript": "^4.6.3"
+    "react-scripts": "5.0.0",
+    "redux-immutable": "^4.0.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
+    "typescript": "^4.6.3",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "set BROWSER=none && set PORT=9967 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lib": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
