--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "immutable": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-antd-rocket": "^0.1.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
@@ -70,7 +71,5 @@
       "last 1 safari version"
     ]
   },
-  "dependencies": {
-    "react-antd-rocket": "^0.1.0"
-  }
+  "dependencies": {}
 }
