--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lib"
   ],
   "peerDependencies": {
-    "react": ">=17.0.2",
+    "react": ">=18.2.0",
     "react-redux": ">=7.2.6",
     "redux": ">=4.1.2",
     "styled-components": ">=5.3.3"
@@ -30,9 +30,9 @@
     "axios": "^0.26.0",
     "immutable": "^4.0.0",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-antd-rocket": "^0.2.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "18.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
