--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "lib"
   ],
   "peerDependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^5.18.1",
     "react": ">=18.2.0",
     "react-redux": ">=7.2.6",
     "redux": ">=4.1.2",
     "styled-components": ">=5.3.3"
   },
   "devDependencies": {
-    "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -68,6 +69,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "dependencies": {}
+  }
 }
