--- a/package.json
+++ b/package.json
@@ -15,24 +15,25 @@
     "lib"
   ],
   "peerDependencies": {
-    "@ant-design/icons": "^4.7.0",
-    "antd": "^5.18.1",
+    "@ant-design/icons": ">=4.7.0",
+    "antd": ">=5.18.1",
     "react": ">=18.2.0",
     "react-redux": ">=7.2.6",
     "redux": ">=4.1.2",
     "styled-components": ">=5.3.3"
   },
   "devDependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "antd": "^5.18.1",
     "axios": "^0.26.0",
     "immutable": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-antd-rocket": "^0.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
